--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,9 +17,14 @@ website:
 
 format:
   html:
-    theme: united
+    theme: 
+      light: united
+      dark: slate
     css: styles.css
     toc: true
-
+  pdf:
+    documentclass: report
+  docx: default
+  pptx: default
 
 
